fix(dev): Update .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost:27017/cycling_game
+MONGODB_URI=mongodb+srv://vegeta42660:q3atZANJLhv6KkWc@cyclism.dy4jy.mongodb.net/?retryWrites=true&w=majority&appName=cyclism
 JWT_SECRET=your_super_secret_key_12345
